# Mini-omni3

./: .gitignore  README.md  pyproject.toml  requirements.txt
litgpt/: __init__.py  config.py  model_pask.py  qkv_reassemble.py  utils.py
litgpt/finetune/: __init__.py
litgpt/finetune/generate/: __init__.py  offline_paskal.py
litgpt/generate/: __init__.py  base_paskal_offline.py
