[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]

[project]
name = "litgpt-paskal-offline"
version = "0.1.0"
description = "Minimal LitGPT fork for offline PASKAL inference (offline_paskal.py)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "lightning>=2.5,<2.6",
  "numpy<2",
  "torch>=2.5,<2.7",
  "tokenizers>=0.15.2",
  "transformers==4.47.1",
  "huggingface-hub>=0.23.5",
  "PyYAML>=6.0",
  "typing-extensions>=4.9",
  "packaging>=23.0",
  "lightning-utilities>=0.11",
  "openai-whisper",
  "librosa>=0.10",
  "soundfile>=0.12",
  "scipy>=1.11",
]

[tool.setuptools.packages.find]
include = ["litgpt", "litgpt.*"]
